--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                             <option value="Valor Diluido">Valor diluído</option>
                             <option value="Link Pagamento GURU">Link de pagamento GURU</option>
                             <option value="Cancelamento">Cancelamento</option>
+                            <option value="Parcelas vencidas somadas">Parcelas vencidas somadas</option>
                         </select>
                         
                         <div style="display: flex; gap: 10px;">
@@ -159,4 +160,5 @@
     
     <script type="module" src="script.js"></script>
 </body>
+
 </html>
